--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header"><h1><a href="./index.html">Välkommen till Unika Recept!</a></h1></div>
         <div class="main">
             <div class="recipes">
-                <h1>Välj mellan våra recept</h1>
+                <h1>Välj mellan våra recept nedan</h1>
                 <div class="list">
                     <ul>
                         <li><a href="./betongpulverpaj.html">Betongpulverpaj</a></li>
