Bytte bakgrund, fixat tidigare overflowproblem, lade till under-construction-subsida

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="container">
         <div class="header"><h1><a href="./index.html">Välkommen till Unika Recept!</a></h1></div>
         <div class="main">
             <div class="recipes">
@@ -17,9 +17,9 @@
                 <div class="list">
                     <ul>
                         <li><a href="./betongpulverpaj.html">Betongpulverpaj</a></li>
-                        <li><a href="#">Sand-doppad tårta</a></li>
-                        <li><a href="#">Stensmaksattasmarshmallows</a></li>
-                        <li><a href="#">Daggmaskmuffins med jordtopping</a></li>
+                        <li><a href="./under-construction.html">Sand-doppad tårta</a></li>
+                        <li><a href="./under-construction.html">Stensmaksattasmarshmallows</a></li>
+                        <li><a href="./under-construction.html">Daggmaskmuffins med jordtopping</a></li>
                     </ul>
                 </div>
             </div>
