--- a/betongpulverpaj.html
+++ b/betongpulverpaj.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="grid-container">
+    <div class="container">
         <div class="header"><h1><a href="./index.html">Välkommen till Unika Recept!</a></h1></div>
         <div class="main">
             <div class="recipes">
