Lagt till alt-texter

--- a/betongpulverpaj.html
+++ b/betongpulverpaj.html
@@ -31,9 +31,9 @@
                         <li>Häll i smeten i en form och grädda i ugnen i 550 grader i 40 minuter.</li>
                     </ol>
                 </div>
-                <img id="pie" src="./images/betongpulverpaj.webp">
+                <img id="pie" src="./images/betongpulverpaj.webp" alt="Bild på färdig betongpulverpaj">
             </div>
-            <img id="logotype" src="./images/logotype.webp">
+            <img id="logotype" src="./images/logotype.webp" alt="Logotyp för Unika Recept">
         </div>
         <div class="footer">
             <p>©️ Unika Recept</p>
