--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </ul>
                 </div>
             </div>
-            <img id="logotype" href="#" src="./images/logotype.webp">
+            <img id="logotype" href="#" src="./images/logotype.webp" alt="Logotyp för Unika Recept">
         </div>
         <div class="footer">
             <p>©️ Unika Recept</p>
