Fixat overflow (lite grann), gjort olika textstycken mer särskiljbara (lättare att se länkar, lättare att se receptet), samt tagit bort en del onödig css-kod

--- a/betongpulverpaj.html
+++ b/betongpulverpaj.html
@@ -24,10 +24,10 @@
                     </ul>
                     <ol>
                         <p id="bold">Gör så här :</p>
-                        <li>Lägg ner allt betongpulver i en skål och tillsätt 1 dl socker.</li>
-                        <li>Häll försiktigt i de två äggen (se till att äggskal inte faller ner i skålen).</li>
-                        <li>Häll ner vattnet.</li>
-                        <li>Rör om tills klumparna försvinner och att det blir en jämn smet.</li>
+                        <li>Lägg ner allt betongpulver i en skål och tillsätt 1 dl socker.</li><br>
+                        <li>Häll försiktigt i de två äggen (se till att äggskal inte faller ner i skålen).</li><br>
+                        <li>Häll ner vattnet.</li><br>
+                        <li>Rör om tills klumparna försvinner och att det blir en jämn smet.</li><br>
                         <li>Häll i smeten i en form och grädda i ugnen i 550 grader i 40 minuter.</li>
                     </ol>
                 </div>
