--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Unika recept</title>
 </head>
 
-<body>
+<body class="overflowpass">
     <div class="container">
         <div class="header"><h1><a href="./index.html">Välkommen till Unika Recept!</a></h1></div>
         <div class="main">
