--- a/under-construction.html
+++ b/under-construction.html
@@ -8,7 +8,7 @@
     <title>Unika recept</title>
 </head>
 
-<body id="overflowpass">
+<body class="overflowpass">
     <div class="container">
         <div class="header">
             <h1><a href="./index.html">Välkommen till Unika Recept!</a></h1>
@@ -19,7 +19,7 @@
                 <div class="list">
                     <ul>
                         <li>För mer information kontakta:</li>
-                        <li>+42 70-303 54 12</li>
+                        <li>+46 70-303 54 12</li>
                     </ul>
                 </div>
             </div>
