försök till att lösa problem med överlappning men med ett lite misslyckande. nästa steg blir att faktiskt fixa det

--- a/newindex.html
+++ b/newindex.html
@@ -14,13 +14,13 @@
             <h1 id="main-header">Unika Recept</h1>
         </div>
         <div class="container">
-            <p id="infobox">Information om sidan</p>
+            <h2 id="infobox">Information om sidan</h2>
         </div>
         <div class="logotype">
             <img id="logo" src="/images/logotype.webp" alt="Logotyp för Unika Recept">
         </div>
         <div class="footer">
-            <p id="copyright"> ©️ Unika Recept</p>
+            <p id="copyright">Unika Recept</p>
         </div>
     </div>
 </body>
