fixat till padding samt margins

--- a/newindex.html
+++ b/newindex.html
@@ -14,13 +14,21 @@
             <h1 id="main-header">Unika Recept</h1>
         </div>
         <div class="container">
-            <h2 id="infobox">Information om sidan</h2>
+            <div class="info-box">
+                <h2 id="recipes-header">Våra favoriter:</h2>
+                <ul>
+                    <li><a href="./smultronpaj.html">Smultronpaj</a></li>
+                    <li><a href="./under-construction.html">Citronkaka</a></li>
+                    <li><a href="./under-construction.html">Kladdkaka</a></li>
+                    <li><a href="./under-construction.html">Muffins</a></li>
+                </ul>
+            </div>
         </div>
         <div class="logotype">
             <img id="logo" src="/images/logotype.webp" alt="Logotyp för Unika Recept">
         </div>
         <div class="footer">
-            <p id="copyright">Unika Recept</p>
+            <p id="copyright">&copy; Unika Recept 2024</p>
         </div>
     </div>
 </body>
