fixed everything yippie :D

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Unika recept</title>
+    <title>Re-write of old site</title>
+    <link rel="stylesheet" href="new.css">
 </head>
 
-<body class="overflowpass">
-    <div class="container">
-        <div class="header"><h1><a href="./index.html">Välkommen till Unika Recept!</a></h1></div>
-        <div class="main">
-            <div class="recipes">
-                <h1>Välj mellan våra recept nedan</h1>
-                <div class="list">
-                    <ul>
-                        <li><a href="./betongpulverpaj.html">Betongpulverpaj</a></li>
-                        <li><a href="./under-construction.html">Sand-doppad tårta</a></li>
-                        <li><a href="./under-construction.html">Stensmaksattasmarshmallows</a></li>
-                        <li><a href="./under-construction.html">Daggmaskmuffins med jordtopping</a></li>
-                    </ul>
-                </div>
+<body>
+    <main>
+        <div class="header">
+            <h1 id="main-header"><a id="site-header-textdeco" href="./index.html">Unika Recept</a></h1>
+        </div>
+        <div class="container">
+            <div class="info-box">
+                <h2 id="recipes-header">Våra favoriter:</h2>
+                <ul>
+                    <li><a href="./smultronpaj.html">Smultronpaj</a></li>
+                    <li><a href="./under-construction.html">Citronkaka</a></li>
+                    <li><a href="./under-construction.html">Kladdkaka</a></li>
+                    <li><a href="./under-construction.html">Muffins</a></li>
+                </ul>
             </div>
-            <img id="logotype" href="#" src="./images/logotype.webp" alt="Logotyp för Unika Recept">
+        </div>
+        <div class="logotype">
+            <img id="logo" src="/images/logotype.webp" alt="Logotyp för Unika Recept">
         </div>
         <div class="footer">
-            <p>©️ Unika Recept</p>
+            <p id="copyright">&copy; Unika Recept 2024</p>
         </div>
+    <main>
 </body>
 
 </html>
