--- a/under-construction.html
+++ b/under-construction.html
@@ -4,28 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="new.css">
     <title>Unika recept</title>
 </head>
-
-<body class="overflowpass">
+<main>
+    <div class="header">
+        <h1 id="main-header"><a href="./index.html">Unika Recept</a></h1>
+    </div>
     <div class="container">
-        <div class="header">
-            <h1><a href="./index.html">Välkommen till Unika Recept!</a></h1>
+        <div class="info-box">
+            <h2 id="recipes-header">Sidan är under konstruktion:</h2>
+            <ul>
+                <li>För mer info kontakta:</li>
+                <li>+46 70-303 54 12</li>
+            </ul>
         </div>
-        <div class="main" id="stretch">
-            <div class="recipes">
-                <h1>Den här sidan är under konstruktion</h1>
-                <div class="list">
-                    <ul>
-                        <li>För mer information kontakta:</li>
-                        <li>+46 70-303 54 12</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer">
-                <p>©️ Unika Recept</p>
-            </div>
-</body>
+    </div>
+    <div class="logotype">
+        <img id="logo" src="/images/logotype.webp" alt="Logotyp för Unika Recept">
+    </div>
+    <div class="footer">
+        <p id="copyright">&copy; Unika Recept 2024</p>
+    </div>
+</main>
 
 </html>
