--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-write of old site</title>
-    <link rel="stylesheet" href="new.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="info-box">
                 <h2 id="recipes-header">Våra favoriter:</h2>
-                <ul>
+                <ul id="main-recipe-list">
                     <li><a href="./smultronpaj.html">Smultronpaj</a></li>
                     <li><a href="./under-construction.html">Citronkaka</a></li>
                     <li><a href="./under-construction.html">Kladdkaka</a></li>
