--- a/smultronpaj.html
+++ b/smultronpaj.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re-write of old site</title>
-    <link rel="stylesheet" href="new.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
