Rättade till problem som orsakade att logotypen ej var synlig

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="logotype">
-            <img id="logo" src="/images/logotype.webp" alt="Logotyp för Unika Recept">
+            <img id="logo" src="./images/logotype.webp" alt="Logotyp för Unika Recept">
         </div>
         <div class="footer">
             <p id="copyright">&copy; Unika Recept 2024</p>
