--- a/under-construction.html
+++ b/under-construction.html
@@ -16,12 +16,12 @@
             <h2 id="recipes-header">Sidan är under konstruktion:</h2>
             <ul>
                 <li>För mer info kontakta:</li>
-                <li>+46 70-303 54 12</li>
+                <li>+46703-03 54 12</li>
             </ul>
         </div>
     </div>
     <div class="logotype">
-        <img id="logo" src="/images/logotype.webp" alt="Logotyp för Unika Recept">
+        <img id="logo" src="./images/logotype.webp" alt="Logotyp för Unika Recept">
     </div>
     <div class="footer">
         <p id="copyright">&copy; Unika Recept 2024</p>
