--- a/smultronpaj.html
+++ b/smultronpaj.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="logotype">
-            <img id="logo-smultronpaj" src="/images/logotype.webp" alt="Logotyp för Unika Recept">
+            <img id="logo-smultronpaj" src="./images/logotype.webp" alt="Logotyp för Unika Recept">
         </div>
         <div class="footer">
             <p id="copyright">&copy; Unika Recept 2024</p>
