--- a/smultronpaj.html
+++ b/smultronpaj.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Re-write of old site</title>
+    <title>Smultronpaj | Unika Recept</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
