--- a/under-construction.html
+++ b/under-construction.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Unika recept</title>
+    <title>Under konstruktion | Unika recept</title>
 </head>
 <main>
     <div class="header">
