lagt till antal av ingredienser

--- a/smultronpaj.html
+++ b/smultronpaj.html
@@ -19,9 +19,9 @@
                 <h2 id="recipes-header">Smultronpaj</h2>
                 <h3 id="recipes-header">Du kommer att behöva:</h3>
                 <ul>
-                    <li>Smultron</a></li>
-                    <li>Paj</a></li>
-                    <li>Silvertejp</a></li>
+                    <li>5 stora smultron (jordgubbar)</a></li>
+                    <li>En eller flera paj</a></li>
+                    <li>En grandiös mängd silvertejp</a></li>
                 </ul>
                 <ol>
                     <li>Häll smultronen över pajen.</li><br>
